5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1642_2450.log
== TEST (2019-04-23 13:01:44) 
-- CODE:
#

nome1 = input()
nome2 = input()

if (nome.sort()):
	print()
else:
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (nome.sort()):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-23 13:05:19) 
-- CODE:
#

nome1 = input()
nome2 = input()

if ():
	print(nome.upper())
else:
	print()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (nome.sort()):
NameError: name 'nome' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
